--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,7 +18,29 @@
 				<h1 class="heading">{{page.heading}}</h1>
 				<p class="description">{{page.description}}</p>
 			</section>
-			<section class="patchwork"></section>
+			<section class="patchwork">
+				<div class="grid">
+					<div class="grid-sizer"></div>
+					<div class="grid-item"><img src="http://placekitten.com/220/220" alt="cat1"></div>
+					<div class="grid-item"><img src="http://placekitten.com/220/220" alt="cat2"></div>
+					<div class="grid-item"><img src="http://placekitten.com/220/220" alt="cat3"></div>
+					<div class="grid-item"><img src="http://placekitten.com/180/180" alt="cat2"></div>
+					<div class="grid-item"><img src="http://placekitten.com/180/180" alt="cat3"></div>
+
+					<div class="grid-item grid-item--3"><img src="http://placekitten.com/300/150" alt="cat4"></div>
+					<div class="grid-item grid-item--3"><img src="http://placekitten.com/300/150" alt="cat5"></div>
+					<div class="grid-item"><img src="http://placekitten.com/220/200" alt="cat6"></div>
+					<div class="grid-item"><img src="http://placekitten.com/200/200" alt="cat7"></div>
+					<div class="grid-item grid-item--3"><img src="http://placekitten.com/300/150" alt="cat8"></div>
+					<div class="grid-item grid-item--3"><img src="http://placekitten.com/300/150" alt="cat9"></div>
+					<div class="grid-item grid-item--2"><img src="http://placekitten.com/250/250" alt="cat10"></div>
+					<div class="grid-item grid-item--2"><img src="http://placekitten.com/250/250" alt="cat11"></div>
+					
+
+				  </div>
+			</section>
 		</div>
 	</div>
+	<script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+    <script src="/js/app.js"></script>
 </html>
