--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,20 +21,23 @@
 			<section class="patchwork">
 				<div class="grid">
 					<div class="grid-sizer"></div>
-					<div class="grid-item grid-item--2"><img src="http://placekitten.com/406/406" alt="cat1"></div>
-					<div class="grid-item"><img src="http://placekitten.com/500/500" alt="cat2"></div>
-					<div class="grid-item"><img src="http://placekitten.com/220/220" alt="cat3"></div>
-					<div class="grid-item"><img src="http://placekitten.com/350/350" alt="cat4"></div>
-					<div class="grid-item"><img src="http://placekitten.com/350/900" alt="cat5"></div>
-					<div class="grid-item"><img src="http://placekitten.com/300/150" alt="cat6"></div>
-					<div class="grid-item"><img src="http://placekitten.com/400/150" alt="cat7"></div>
-					<div class="grid-item"><img src="http://placekitten.com/220/200" alt="cat8"></div>
-					<div class="grid-item"><img src="http://placekitten.com/200/200" alt="cat9"></div>
-					<div class="grid-item"><img src="http://placekitten.com/300/300" alt="cat10"></div>
-					<div class="grid-item"><img src="http://placekitten.com/300/150" alt="cat11"></div>
-					<div class="grid-item"><img src="http://placekitten.com/250/250" alt="cat12"></div>
-					<div class="grid-item"><img src="http://placekitten.com/250/250" alt="cat13"></div>
-					
+
+					<div class="grid-item"><img src="http://placekitten.com/200/200" alt="cat1"></div>
+					<div class="grid-item"><img src="http://placekitten.com/200/200" alt="cat2"></div>
+					<div class="grid-item grid-item--2"><img src="http://placekitten.com/406/200" alt=""></div>
+					<div class="grid-item"><img src="http://placekitten.com/200/200" alt="cat1"></div>
+					<div class="grid-item"><img src="http://placekitten.com/200/200" alt="cat2"></div>
+					<div class="grid-item grid-item--2"><img src="http://placekitten.com/406/700" alt=""></div>	
+					<div class="grid-item"><img src="http://placekitten.com/200/200" alt="cat1"></div>
+					<div class="grid-item grid-item--2"><img src="http://placekitten.com/406/200" alt=""></div>
+					<div class="grid-item grid-item--2"><img src="http://placekitten.com/406/406" alt="cat"></div>
+					<div class="grid-item grid-item--2"><img src="http://placekitten.com/406/390" alt="cat"></div>
+					<div class="grid-item"><img src="http://placekitten.com/200/200" alt="cat1"></div>
+					<div class="grid-item"><img src="http://placekitten.com/200/200" alt="cat1"></div>
+					<div class="grid-item"><img src="http://placekitten.com/200/200" alt="cat1"></div>
+					<div class="grid-item"><img src="http://placekitten.com/200/200" alt="cat1"></div>
+					<div class="grid-item"><img src="http://placekitten.com/200/200" alt="cat1"></div>
+
 
 				  </div>
 			</section>
