--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,48 +1,101 @@
 <!DOCTYPE html>
-	{% include head.html %}
+{% include head.html %}
+
 <body>
 </body>
-	<div class="app">
-		<div class="top-bar">
-			<header class="top-nav">
-				<a href="/" class="logo">{{page.logo}}</a>
-				<nav class="nav">
-					<a href="#" class="link">Portfolio</a>
-					<a href="#" class="link">Team</a>
-					<a href="#" class="link">Contacts</a>
-				</nav>
-			</header>
-		</div>
-		<div class="container">
-			<section class="hero">
-				<h1 class="heading">{{page.heading}}</h1>
-				<p class="description">{{page.description}}</p>
-			</section>
-			<section class="patchwork">
-				<div class="grid">
-					<div class="grid-sizer"></div>
-
-					<div class="grid-item"><img src="http://placekitten.com/200/200" alt="cat1"></div>
-					<div class="grid-item"><img src="http://placekitten.com/200/200" alt="cat2"></div>
-					<div class="grid-item grid-item--2"><img src="http://placekitten.com/406/200" alt=""></div>
-					<div class="grid-item"><img src="http://placekitten.com/200/200" alt="cat1"></div>
-					<div class="grid-item"><img src="http://placekitten.com/200/200" alt="cat2"></div>
-					<div class="grid-item grid-item--2"><img src="http://placekitten.com/406/700" alt=""></div>	
-					<div class="grid-item"><img src="http://placekitten.com/200/200" alt="cat1"></div>
-					<div class="grid-item grid-item--2"><img src="http://placekitten.com/406/200" alt=""></div>
-					<div class="grid-item grid-item--2"><img src="http://placekitten.com/406/406" alt="cat"></div>
-					<div class="grid-item grid-item--2"><img src="http://placekitten.com/406/390" alt="cat"></div>
-					<div class="grid-item"><img src="http://placekitten.com/200/200" alt="cat1"></div>
-					<div class="grid-item"><img src="http://placekitten.com/200/200" alt="cat1"></div>
-					<div class="grid-item"><img src="http://placekitten.com/200/200" alt="cat1"></div>
-					<div class="grid-item"><img src="http://placekitten.com/200/200" alt="cat1"></div>
-					<div class="grid-item"><img src="http://placekitten.com/200/200" alt="cat1"></div>
-
-
-				  </div>
-			</section>
-		</div>
+<div class="app">
+	<div class="top-bar">
+		<header class="top-nav">
+			<a href="/" class="logo">{{page.logo}}</a>
+			<nav class="nav">
+				<a href="#" class="link">Portfolio</a>
+				<a href="#" class="link">Team</a>
+				<a href="#" class="link">Contacts</a>
+			</nav>
+		</header>
 	</div>
-	<script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
-    <script src="/js/app.js"></script>
+	<div class="container">
+		<section class="hero">
+			<h1 class="heading">{{page.heading}}</h1>
+			<p class="description">{{page.description}}</p>
+		</section>
+		<section class="patchwork">
+			<div class="grid">
+				<div class="grid-sizer"></div>
+				<div class="grid-item">
+					<a href="#"><img src="./assets/images/FnacGamificate.jpg" alt="image1"></a>
+				</div>
+				<div class="grid-item">
+					<a href="#"><img src="./assets/images/FnacGaming.jpg" alt="image2"></a></div>
+				<div class="grid-item grid-item--2">
+					<a href="#"><img src="./assets/images/FnacBlackFriday.jpg" alt="image3"></a>
+				</div>
+				<div class="grid-item">
+					<a href="#"><img src="./assets/images/Betano.jpg" alt="image4"></a>
+				</div>
+				<div class="grid-item">
+					<a href="#"><img src="./assets/images/NoSoloAgua.jpg" alt="image5"></a>
+				</div>
+				<div class="grid-item grid-item--2">
+					<a href="#"><img src="./assets/images/SportTv.jpg" alt="image6"></a>
+				</div>
+				<div class="grid-item">
+					<a href="#"><img src="./assets/images/Coastline.jpg" alt="image7"></a>
+				</div>
+				<div class="grid-item">
+					<a href="#"><img src="./assets/images/Barcamp2.jpg" alt="image8"></a>
+				</div>
+				<div class="grid-item">
+					<a href="#"><img src="./assets/images/Barcamp1.jpg" alt="image9"></a>
+				</div>
+				<div class="grid-item">
+					<a href="#"><img src="./assets/images/Vaarwell.jpg" alt="image10"></a>
+				</div>
+				<div class="grid-item">
+					<a href="#"><img src="./assets/images/PurplePill.jpg" alt="image11"></a>
+				</div>
+				<div class="grid-item">
+					<a href="#"><img src="./assets/images/FFMS.jpg" alt="image12"></a>
+				</div>
+				<div class="grid-item">
+					<a href="#"><img src="./assets/images/Presspeople.jpg" alt="image13"></a>
+				</div>
+				<div class="grid-item">
+					<a href="#"><img src="./assets/images/FnacBrunoMars.jpg" alt="image14"></a>
+				</div>
+				<div class="grid-item">
+					<a href="#"><img src="./assets/images/FnacPlaystaion.jpg" alt="image15"></a>
+				</div>
+				<div class="grid-item">
+					<a href="#"><img src="./assets/images/FnacMundial.jpg" alt="image16"></a>
+				</div>
+				<div class="grid-item">
+					<a href="#"><img src="./assets/images/Elite.jpg" alt="image17"></a>
+				</div>
+				<div class="grid-item">
+					<a href="#"><img src="./assets/images/Mesh.jpg" alt="image18"></a>
+				</div>
+				<div class="grid-item">
+					<a href="#"><img src="./assets/images/Paredes.jpg" alt="image19"></a>
+				</div>
+				<div class="grid-item">
+					<a href="#"><img src="./assets/images/Fitness.jpg" alt="image20"></a>
+				</div>
+				<div class="grid-item">
+					<a href="#"><img src="./assets/images/Santander.jpg" alt="image21"></a>
+				</div>
+				<div class="grid-item">
+					<a href="#"><img src="./assets/images/Miranton.jpg" alt="image22"></a>
+				</div>
+				<div class="grid-item">
+					<a href="#"><img src="./assets/images/Ziki.jpg" alt="image23"></a>
+				</div>
+			</div>
+	</div>
+	</section>
+</div>
+</div>
+<script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+<script src="/js/app.js"></script>
+
 </html>
