more images added

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -42,53 +42,56 @@
 				<div class="grid-item">
 					<a href="#"><img src="./assets/images/Coastline.jpg" alt="image7"></a>
 				</div>
-				<div class="grid-item">
-					<a href="#"><img src="./assets/images/Barcamp2.jpg" alt="image8"></a>
+				<div class="grid-item grid-item--2">
+					<a href="#"><img src="./assets/images/FnacSamsung.jpg" alt="image8"></a>
 				</div>
 				<div class="grid-item">
-					<a href="#"><img src="./assets/images/Barcamp1.jpg" alt="image9"></a>
+					<a href="#"><img src="./assets/images/Barcamp2.jpg" alt="image9"></a>
 				</div>
 				<div class="grid-item">
-					<a href="#"><img src="./assets/images/Vaarwell.jpg" alt="image10"></a>
+					<a href="#"><img src="./assets/images/Barcamp1.jpg" alt="image10"></a>
+				</div>
+				<div class="grid-item grid-item--2">
+					<a href="#"><img src="./assets/images/Vaarwell.jpg" alt="image11"></a>
 				</div>
 				<div class="grid-item">
-					<a href="#"><img src="./assets/images/PurplePill.jpg" alt="image11"></a>
+					<a href="#"><img src="./assets/images/PurplePill.jpg" alt="image12"></a>
 				</div>
 				<div class="grid-item">
-					<a href="#"><img src="./assets/images/FFMS.jpg" alt="image12"></a>
+					<a href="#"><img src="./assets/images/FFMS.jpg" alt="image13"></a>
 				</div>
 				<div class="grid-item">
-					<a href="#"><img src="./assets/images/Presspeople.jpg" alt="image13"></a>
+					<a href="#"><img src="./assets/images/Presspeople.jpg" alt="image14"></a>
 				</div>
 				<div class="grid-item">
-					<a href="#"><img src="./assets/images/FnacBrunoMars.jpg" alt="image14"></a>
+					<a href="#"><img src="./assets/images/FnacBrunoMars.jpg" alt="image15"></a>
 				</div>
 				<div class="grid-item">
 					<a href="#"><img src="./assets/images/FnacPlaystaion.jpg" alt="image15"></a>
 				</div>
-				<div class="grid-item">
-					<a href="#"><img src="./assets/images/FnacMundial.jpg" alt="image16"></a>
+				<div class="grid-item grid-item--2">
+					<a href="#"><img src="./assets/images/FnacMundial.jpg" alt="image17"></a>
 				</div>
 				<div class="grid-item">
-					<a href="#"><img src="./assets/images/Elite.jpg" alt="image17"></a>
+					<a href="#"><img src="./assets/images/Elite.jpg" alt="image18"></a>
 				</div>
 				<div class="grid-item">
-					<a href="#"><img src="./assets/images/Mesh.jpg" alt="image18"></a>
+					<a href="#"><img src="./assets/images/Mesh.jpg" alt="image19"></a>
+				</div>
+				<div class="grid-item grid-item--2">
+					<a href="#"><img src="./assets/images/Paredes.jpg" alt="image20"></a>
 				</div>
 				<div class="grid-item">
-					<a href="#"><img src="./assets/images/Paredes.jpg" alt="image19"></a>
+					<a href="#"><img src="./assets/images/Fitness.jpg" alt="image21"></a>
+				</div>
+				<div class="grid-item grid-item--2">
+					<a href="#"><img src="./assets/images/Miranton.jpg" alt="image23"></a>
+				</div>
+				<div class="grid-item grid-item--2">
+					<a href="#"><img src="./assets/images/Ziki.jpg" alt="image24"></a>
 				</div>
 				<div class="grid-item">
-					<a href="#"><img src="./assets/images/Fitness.jpg" alt="image20"></a>
-				</div>
-				<div class="grid-item">
-					<a href="#"><img src="./assets/images/Santander.jpg" alt="image21"></a>
-				</div>
-				<div class="grid-item">
-					<a href="#"><img src="./assets/images/Miranton.jpg" alt="image22"></a>
-				</div>
-				<div class="grid-item">
-					<a href="#"><img src="./assets/images/Ziki.jpg" alt="image23"></a>
+					<a href="#"><img src="./assets/images/Santander.jpg" alt="image22"></a>
 				</div>
 			</div>
 	</div>
