--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,9 +8,9 @@
 		<header class="top-nav">
 			<a href="/" class="logo">{{page.logo}}</a>
 			<nav class="nav">
-				<a href="#" class="link">Portfolio</a>
-				<a href="#" class="link">Team</a>
-				<a href="#" class="link">Contacts</a>
+				<a href="#" class="link">Portfólio</a>
+				<a href="#" class="link">Equipa</a>
+				<a href="#" class="link">Contactos</a>
 			</nav>
 		</header>
 	</div>
