--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,75 +22,88 @@
 		<section class="patchwork">
 			<div class="grid">
 				<div class="grid-sizer"></div>
-				<div class="grid-item">
-					<a href="#"><img src="./assets/images/FnacGamificate.jpg" alt="image1"></a>
+				<div class="grid-item fade">
+					<a href="#">
+						<label class="label">Fnac Gamificate</label>
+						<img src="./assets/images/FnacGamificate.jpg" alt="image1">
+					</a>
 				</div>
-				<div class="grid-item">
-					<a href="#"><img src="./assets/images/FnacGaming.jpg" alt="image2"></a></div>
-				<div class="grid-item grid-item--2">
-					<a href="#"><img src="./assets/images/FnacBlackFriday.jpg" alt="image3"></a>
+				<div class="grid-item blur">
+					<a href="#">
+						<label class="label">Fnac Gaming</label>
+						<img src="./assets/images/FnacGaming.jpg" alt="image2">
+					</a>
+					</div>
+				<div class="grid-item grid-item--2 fade">
+					<a href="#">
+						<label class="label">Fnac Black Friday</label>
+						<img src="./assets/images/FnacBlackFriday.jpg" alt="image3">
+					</a>
 				</div>
-				<div class="grid-item">
-					<a href="#"><img src="./assets/images/Betano.jpg" alt="image4"></a>
+				<div class="grid-item blur">
+					<a href="#">
+						<label class="label">Betano</label>
+						<img src="./assets/images/Betano.jpg" alt="image4">
+					</a>
 				</div>
-				<div class="grid-item">
+				<div class="grid-item fade">
 					<a href="#"><img src="./assets/images/NoSoloAgua.jpg" alt="image5"></a>
 				</div>
-				<div class="grid-item grid-item--2">
+				<div class="grid-item grid-item--2 blur">
 					<a href="#"><img src="./assets/images/SportTv.jpg" alt="image6"></a>
 				</div>
-				<div class="grid-item">
+				<div class="grid-item fade">
 					<a href="#"><img src="./assets/images/Coastline.jpg" alt="image7"></a>
 				</div>
-				<div class="grid-item grid-item--2">
+				<div class="grid-item grid-item--2 blur">
 					<a href="#"><img src="./assets/images/FnacSamsung.jpg" alt="image8"></a>
 				</div>
-				<div class="grid-item">
+				<div class="grid-item fade">
 					<a href="#"><img src="./assets/images/Barcamp2.jpg" alt="image9"></a>
 				</div>
-				<div class="grid-item">
+				<div class="grid-item blur">
 					<a href="#"><img src="./assets/images/Barcamp1.jpg" alt="image10"></a>
 				</div>
-				<div class="grid-item grid-item--2">
+				<div class="grid-item grid-item--2 fade">
 					<a href="#"><img src="./assets/images/Vaarwell.jpg" alt="image11"></a>
 				</div>
-				<div class="grid-item">
+				<div class="grid-item fade">
 					<a href="#"><img src="./assets/images/PurplePill.jpg" alt="image12"></a>
 				</div>
-				<div class="grid-item">
+				<div class="grid-item blur">
 					<a href="#"><img src="./assets/images/FFMS.jpg" alt="image13"></a>
 				</div>
-				<div class="grid-item">
+				<div class="grid-item fade">
 					<a href="#"><img src="./assets/images/Presspeople.jpg" alt="image14"></a>
 				</div>
-				<div class="grid-item">
+				<div class="grid-item blur">
 					<a href="#"><img src="./assets/images/FnacBrunoMars.jpg" alt="image15"></a>
 				</div>
-				<div class="grid-item">
+				<div class="grid-item fade">
 					<a href="#"><img src="./assets/images/FnacPlaystaion.jpg" alt="image15"></a>
 				</div>
-				<div class="grid-item grid-item--2">
+				<div class="grid-item grid-item--2 blur">
 					<a href="#"><img src="./assets/images/FnacMundial.jpg" alt="image17"></a>
 				</div>
-				<div class="grid-item">
+				<div class="grid-item fade">
 					<a href="#"><img src="./assets/images/Elite.jpg" alt="image18"></a>
 				</div>
-				<div class="grid-item">
+				<div class="grid-item blur">
 					<a href="#"><img src="./assets/images/Mesh.jpg" alt="image19"></a>
 				</div>
-				<div class="grid-item grid-item--2">
+				<div class="grid-item grid-item--2 fade">
 					<a href="#"><img src="./assets/images/Paredes.jpg" alt="image20"></a>
 				</div>
-				<div class="grid-item">
+				<div class="grid-item blur">
 					<a href="#"><img src="./assets/images/Fitness.jpg" alt="image21"></a>
 				</div>
-				<div class="grid-item grid-item--2">
+				<div class="grid-item grid-item--2 fade">
 					<a href="#"><img src="./assets/images/Miranton.jpg" alt="image23"></a>
 				</div>
-				<div class="grid-item grid-item--2">
+				<div class="grid-item grid-item--2 blur">
 					<a href="#"><img src="./assets/images/Ziki.jpg" alt="image24"></a>
 				</div>
-				<div class="grid-item">
+				<div class="grid-item fade">
 					<a href="#"><img src="./assets/images/Santander.jpg" alt="image22"></a>
 				</div>
 			</div>
