--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -77,7 +77,7 @@ $gridGutter: 6;
 		padding: 6px;
 		pointer-events: none;
 		transform: translateY(15px);
-		transition: all 0.12s ease-out;
+		transition: all 0.2s cubic-bezier(0.16, 1, 0.3, 1);
 		opacity: 0;
 		background-color: rgba(35, 35, 35, 0.6);
 		font-weight: bold;
