top nav changes, new page added and animation tweaks

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,115 +2,173 @@
 {% include head.html %}
 
 <body>
-</body>
-<div class="app">
-	<div class="top-bar">
-		<header class="top-nav">
-			<a href="/" class="logo">{{page.logo}}</a>
-			<nav class="nav">
-				<a href="#" class="link">Portfólio</a>
-				<a href="#" class="link">Equipa</a>
-				<a href="#" class="link">Contactos</a>
-			</nav>
-		</header>
-	</div>
-	<div class="container">
-		<section class="hero">
-			<h1 class="heading">{{page.heading}}</h1>
-			<p class="description">{{page.description}}</p>
-		</section>
-		<section class="patchwork">
-			<div class="grid">
-				<div class="grid-sizer"></div>
-				<div class="grid-item fade">
-					<a href="#">
-						<label class="label">Fnac Gamificate</label>
-						<img src="./assets/images/FnacGamificate.jpg" alt="image1">
-					</a>
-				</div>
-				<div class="grid-item blur">
-					<a href="#">
-						<label class="label">Fnac Gaming</label>
-						<img src="./assets/images/FnacGaming.jpg" alt="image2">
-					</a>
+	<div class="app">
+		<div class="top-bar">
+			<header class="top-nav">
+				<a href="/" class="logo"><span class="brand"></span>{{page.logo}}</a>
+				<nav class="nav">
+					<a href="#" class="link"><span class="label">Portfólio</span></a>
+					<a href="#" class="link"><span class="label">Equipa</span></a>
+					<a href="#" class="link"><span class="label">Contactos</span></a>
+				</nav>
+			</header>
+		</div>
+		<div class="container">
+			<section class="hero">
+				<h1 class="heading">{{page.heading}}</h1>
+			</section>
+			<section class="patchwork">
+				<div class="grid">
+					<div class="grid-sizer"></div>
+					<div class="grid-item fade">
+						<a href="/detail">
+							<label class="label">Fnac Gamificate</label>
+							<img src="./assets/images/FnacGamificate.jpg" alt="image1">
+						</a>
 					</div>
-				<div class="grid-item grid-item--2 fade">
-					<a href="#">
-						<label class="label">Fnac Black Friday</label>
-						<img src="./assets/images/FnacBlackFriday.jpg" alt="image3">
-					</a>
+					<div class="grid-item fade">
+						<a href="/detail">
+							<label class="label">Fnac Gaming</label>
+							<img src="./assets/images/FnacGaming.jpg" alt="image2">
+						</a>
+						</div>
+					<div class="grid-item grid-item--2 fade">
+						<a href="/detail">
+							<label class="label">Fnac Black Friday</label>
+							<img src="./assets/images/FnacBlackFriday.jpg" alt="image3">
+						</a>
+					</div>
+					<div class="grid-item fade">
+						<a href="/detail">
+							<label class="label">Betano</label>
+							<img src="./assets/images/Betano.jpg" alt="image4">
+						</a>
+					</div>
+					<div class="grid-item fade">
+						<a href="/detail">
+							<label class="label">No Solo Agua</label>
+							<img src="./assets/images/NoSoloAgua.jpg" alt="image5">
+						</a>
+					</div>
+					<div class="grid-item grid-item--2 fade">
+						<a href="/detail">
+							<label class="label">Sport Tv</label>
+							<img src="./assets/images/SportTv.jpg" alt="image6">
+						</a>
+					</div>
+					<div class="grid-item fade">
+						<a href="/detail">
+							<label class="label">Coastline</label>
+							<img src="./assets/images/Coastline.jpg" alt="image7">
+						</a>
+					</div>
+					<div class="grid-item grid-item--2 fade">
+						<a href="/detail">
+							<label class="label">Fnac Samsung</label>
+							<img src="./assets/images/FnacSamsung.jpg" alt="image8">
+						</a>
+					</div>
+					<div class="grid-item fade">
+						<a href="/detail">
+							<label class="label">Barcamp 2</label>
+							<img src="./assets/images/Barcamp2.jpg" alt="image9">
+						</a>
+					</div>
+					<div class="grid-item fade">
+						<a href="/detail">
+							<label class="label">Barcamp 1</label>
+							<img src="./assets/images/Barcamp1.jpg" alt="image10">
+						</a>
+					</div>
+					<div class="grid-item grid-item--2 fade">
+						<a href="/detail">
+							<label class="label">Vaarwell</label>
+							<img src="./assets/images/Vaarwell.jpg" alt="image11">
+						</a>
+					</div>
+					<div class="grid-item fade">
+						<a href="/detail">
+							<label class="label">Purple Pill</label>
+							<img src="./assets/images/PurplePill.jpg" alt="image12">
+						</a>
+					</div>
+					<div class="grid-item fade">
+						<a href="/detail">
+							<label class="label">FFMS</label>
+							<img src="./assets/images/FFMS.jpg" alt="image13">
+						</a>
+					</div>
+					<div class="grid-item fade">
+						<a href="/detail">
+							<label class="label">Press People</label>
+							<img src="./assets/images/Presspeople.jpg" alt="image14">
+						</a>
+					</div>
+					<div class="grid-item fade">
+						<a href="/detail">
+							<label class="label">Fnac Bruno Mars</label>
+							<img src="./assets/images/FnacBrunoMars.jpg" alt="image15">
+						</a>
+					</div>
+					<div class="grid-item fade">
+						<a href="/detail">
+							<label class="label">Fnac Playstation</label>
+							<img src="./assets/images/FnacPlaystaion.jpg" alt="image15">
+						</a>
+					</div>
+					<div class="grid-item grid-item--2 fade">
+						<a href="/detail">
+							<label class="label">Fnac Mundial</label>
+							<img src="./assets/images/FnacMundial.jpg" alt="image17">
+						</a>
+					</div>
+					<div class="grid-item fade">
+						<a href="/detail">
+							<label class="label">Elite</label>
+							<img src="./assets/images/Elite.jpg" alt="image18">
+						</a>
+					</div>
+					<div class="grid-item fade">
+						<a href="/detail">
+							<label class="label">Mesh</label>
+							<img src="./assets/images/Mesh.jpg" alt="image19">
+						</a>
+					</div>
+					<div class="grid-item grid-item--2 fade">
+						<a href="/detail">
+							<label class="label">Paredes</label>
+							<img src="./assets/images/Paredes.jpg" alt="image20">
+						</a>
+					</div>
+					<div class="grid-item fade">
+						<a href="/detail">
+							<label class="label">Fitness</label>
+							<img src="./assets/images/Fitness.jpg" alt="image21">
+						</a>
+					</div>
+					<div class="grid-item grid-item--2 fade">
+						<a href="/detail">
+							<label class="label">Miranton</label>
+							<img src="./assets/images/Miranton.jpg" alt="image23">
+						</a>
+					</div>
+					<div class="grid-item grid-item--2 fade">
+						<a href="/detail">
+							<label class="label">Ziki</label>
+							<img src="./assets/images/Ziki.jpg" alt="image24">
+						</a>
+					</div>
+					<div class="grid-item fade">
+						<a href="/detail">
+							<label class="label">Santander</label>
+							<img src="./assets/images/Santander.jpg" alt="image22">
+						</a>
+					</div>
 				</div>
-				<div class="grid-item blur">
-					<a href="#">
-						<label class="label">Betano</label>
-						<img src="./assets/images/Betano.jpg" alt="image4">
-					</a>
-				</div>
-				<div class="grid-item fade">
-					<a href="#"><img src="./assets/images/NoSoloAgua.jpg" alt="image5"></a>
-				</div>
-				<div class="grid-item grid-item--2 blur">
-					<a href="#"><img src="./assets/images/SportTv.jpg" alt="image6"></a>
-				</div>
-				<div class="grid-item fade">
-					<a href="#"><img src="./assets/images/Coastline.jpg" alt="image7"></a>
-				</div>
-				<div class="grid-item grid-item--2 blur">
-					<a href="#"><img src="./assets/images/FnacSamsung.jpg" alt="image8"></a>
-				</div>
-				<div class="grid-item fade">
-					<a href="#"><img src="./assets/images/Barcamp2.jpg" alt="image9"></a>
-				</div>
-				<div class="grid-item blur">
-					<a href="#"><img src="./assets/images/Barcamp1.jpg" alt="image10"></a>
-				</div>
-				<div class="grid-item grid-item--2 fade">
-					<a href="#"><img src="./assets/images/Vaarwell.jpg" alt="image11"></a>
-				</div>
-				<div class="grid-item fade">
-					<a href="#"><img src="./assets/images/PurplePill.jpg" alt="image12"></a>
-				</div>
-				<div class="grid-item blur">
-					<a href="#"><img src="./assets/images/FFMS.jpg" alt="image13"></a>
-				</div>
-				<div class="grid-item fade">
-					<a href="#"><img src="./assets/images/Presspeople.jpg" alt="image14"></a>
-				</div>
-				<div class="grid-item blur">
-					<a href="#"><img src="./assets/images/FnacBrunoMars.jpg" alt="image15"></a>
-				</div>
-				<div class="grid-item fade">
-					<a href="#"><img src="./assets/images/FnacPlaystaion.jpg" alt="image15"></a>
-				</div>
-				<div class="grid-item grid-item--2 blur">
-					<a href="#"><img src="./assets/images/FnacMundial.jpg" alt="image17"></a>
-				</div>
-				<div class="grid-item fade">
-					<a href="#"><img src="./assets/images/Elite.jpg" alt="image18"></a>
-				</div>
-				<div class="grid-item blur">
-					<a href="#"><img src="./assets/images/Mesh.jpg" alt="image19"></a>
-				</div>
-				<div class="grid-item grid-item--2 fade">
-					<a href="#"><img src="./assets/images/Paredes.jpg" alt="image20"></a>
-				</div>
-				<div class="grid-item blur">
-					<a href="#"><img src="./assets/images/Fitness.jpg" alt="image21"></a>
-				</div>
-				<div class="grid-item grid-item--2 fade">
-					<a href="#"><img src="./assets/images/Miranton.jpg" alt="image23"></a>
-				</div>
-				<div class="grid-item grid-item--2 blur">
-					<a href="#"><img src="./assets/images/Ziki.jpg" alt="image24"></a>
-				</div>
-				<div class="grid-item fade">
-					<a href="#"><img src="./assets/images/Santander.jpg" alt="image22"></a>
-				</div>
-			</div>
+			</section>
+		</div>
 	</div>
-	</section>
-</div>
-</div>
+</body>
 <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
 <script src="/js/app.js"></script>
 
