background color fix

--- a/_layouts/detail.html
+++ b/_layouts/detail.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 {% include head.html %}
 
-<body>
+<body class="detail">
     <div class="app detail">
         <div class="top-bar">
             <header class="top-nav">
