--- a/_layouts/detail.html
+++ b/_layouts/detail.html
@@ -15,9 +15,12 @@
         </div>
         <section class="content">
             <div class="hero">
-                <img src="./assets/images/SportTv.jpg" alt="image6">
+                <iframe src="https://player.vimeo.com/video/{{page.video}}"
+                    width="100%" height="480" frameborder="0"
+                    allow="autoplay; fullscreen" allowfullscreen>
+                </iframe>
             </div>
-            <h1 class="heading">Title</h1>
+            <h1 class="heading">{{page.name}}</h1>
             <p>icon - text</p>
             <p>icon - text</p>
             <p>icon - text</p>
