--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,145 +21,145 @@
 				<div class="grid">
 					<div class="grid-sizer"></div>
 					<div class="grid-item fade">
-						<a href="/detail">
+						<a href="/fnac-gamificate">
 							<label class="label">Fnac Gamificate</label>
 							<img src="./assets/images/FnacGamificate.jpg" alt="image1">
 						</a>
 					</div>
 					<div class="grid-item fade">
-						<a href="/detail">
+						<a href="/fnac-gaming">
 							<label class="label">Fnac Gaming</label>
 							<img src="./assets/images/FnacGaming.jpg" alt="image2">
 						</a>
 						</div>
 					<div class="grid-item grid-item--2 fade">
-						<a href="/detail">
+						<a href="/fnac-black-friday">
 							<label class="label">Fnac Black Friday</label>
 							<img src="./assets/images/FnacBlackFriday.jpg" alt="image3">
 						</a>
 					</div>
 					<div class="grid-item fade">
-						<a href="/detail">
+						<a href="/betano">
 							<label class="label">Betano</label>
 							<img src="./assets/images/Betano.jpg" alt="image4">
 						</a>
 					</div>
 					<div class="grid-item fade">
-						<a href="/detail">
+						<a href="/no-solo-agua">
 							<label class="label">No Solo Agua</label>
 							<img src="./assets/images/NoSoloAgua.jpg" alt="image5">
 						</a>
 					</div>
 					<div class="grid-item grid-item--2 fade">
-						<a href="/detail">
+						<a href="/sport-tv">
 							<label class="label">Sport Tv</label>
 							<img src="./assets/images/SportTv.jpg" alt="image6">
 						</a>
 					</div>
 					<div class="grid-item fade">
-						<a href="/detail">
+						<a href="/coastline">
 							<label class="label">Coastline</label>
 							<img src="./assets/images/Coastline.jpg" alt="image7">
 						</a>
 					</div>
 					<div class="grid-item grid-item--2 fade">
-						<a href="/detail">
+						<a href="/fnac-samsung">
 							<label class="label">Fnac Samsung</label>
 							<img src="./assets/images/FnacSamsung.jpg" alt="image8">
 						</a>
 					</div>
 					<div class="grid-item fade">
-						<a href="/detail">
+						<a href="/bar-camp-2">
 							<label class="label">Barcamp 2</label>
 							<img src="./assets/images/Barcamp2.jpg" alt="image9">
 						</a>
 					</div>
 					<div class="grid-item fade">
-						<a href="/detail">
+						<a href="/bar-camp-1">
 							<label class="label">Barcamp 1</label>
 							<img src="./assets/images/Barcamp1.jpg" alt="image10">
 						</a>
 					</div>
 					<div class="grid-item grid-item--2 fade">
-						<a href="/detail">
+						<a href="/vaarwell">
 							<label class="label">Vaarwell</label>
 							<img src="./assets/images/Vaarwell.jpg" alt="image11">
 						</a>
 					</div>
 					<div class="grid-item fade">
-						<a href="/detail">
+						<a href="/purple-pill">
 							<label class="label">Purple Pill</label>
 							<img src="./assets/images/PurplePill.jpg" alt="image12">
 						</a>
 					</div>
 					<div class="grid-item fade">
-						<a href="/detail">
+						<a href="/ffms">
 							<label class="label">FFMS</label>
 							<img src="./assets/images/FFMS.jpg" alt="image13">
 						</a>
 					</div>
 					<div class="grid-item fade">
-						<a href="/detail">
+						<a href="/press-people">
 							<label class="label">Press People</label>
 							<img src="./assets/images/Presspeople.jpg" alt="image14">
 						</a>
 					</div>
 					<div class="grid-item fade">
-						<a href="/detail">
+						<a href="/fnac-bruno-mars">
 							<label class="label">Fnac Bruno Mars</label>
 							<img src="./assets/images/FnacBrunoMars.jpg" alt="image15">
 						</a>
 					</div>
 					<div class="grid-item fade">
-						<a href="/detail">
+						<a href="/fnac-playstation">
 							<label class="label">Fnac Playstation</label>
 							<img src="./assets/images/FnacPlaystaion.jpg" alt="image15">
 						</a>
 					</div>
 					<div class="grid-item grid-item--2 fade">
-						<a href="/detail">
+						<a href="/fnac-mundial">
 							<label class="label">Fnac Mundial</label>
 							<img src="./assets/images/FnacMundial.jpg" alt="image17">
 						</a>
 					</div>
 					<div class="grid-item fade">
-						<a href="/detail">
+						<a href="/elite">
 							<label class="label">Elite</label>
 							<img src="./assets/images/Elite.jpg" alt="image18">
 						</a>
 					</div>
 					<div class="grid-item fade">
-						<a href="/detail">
+						<a href="/mesh">
 							<label class="label">Mesh</label>
 							<img src="./assets/images/Mesh.jpg" alt="image19">
 						</a>
 					</div>
 					<div class="grid-item grid-item--2 fade">
-						<a href="/detail">
+						<a href="/paredes">
 							<label class="label">Paredes</label>
 							<img src="./assets/images/Paredes.jpg" alt="image20">
 						</a>
 					</div>
 					<div class="grid-item fade">
-						<a href="/detail">
+						<a href="/fitness">
 							<label class="label">Fitness</label>
 							<img src="./assets/images/Fitness.jpg" alt="image21">
 						</a>
 					</div>
 					<div class="grid-item grid-item--2 fade">
-						<a href="/detail">
+						<a href="/mirantron">
 							<label class="label">Miranton</label>
 							<img src="./assets/images/Miranton.jpg" alt="image23">
 						</a>
 					</div>
 					<div class="grid-item grid-item--2 fade">
-						<a href="/detail">
+						<a href="/ziki">
 							<label class="label">Ziki</label>
 							<img src="./assets/images/Ziki.jpg" alt="image24">
 						</a>
 					</div>
 					<div class="grid-item fade">
-						<a href="/detail">
+						<a href="/santander">
 							<label class="label">Santander</label>
 							<img src="./assets/images/Santander.jpg" alt="image22">
 						</a>
