--- a/_layouts/detail.html
+++ b/_layouts/detail.html
@@ -20,7 +20,7 @@
                     allow="autoplay; fullscreen" allowfullscreen>
                 </iframe>
             </div>
-            <h1 class="heading">{{page.name}}</h1>
+            <h1 class="heading">{{page.project}}</h1>
             <p>icon - text</p>
             <p>icon - text</p>
             <p>icon - text</p>
